--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -204,12 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "58\n",
       "Number of nodes classified differently between OtrisymNMF and DCBM :21\n",
       "Number of nodes well classified by OtrisymNMF and not by DCBM :9\n",
       "Number of nodes well classified by DCBM and not by OtrisymNMF :12\n"
@@ -223,6 +224,24 @@
     "print(f\"Number of nodes well classified by OtrisymNMF and not by DCBM :{np.sum((v[nodediff] == np.array(True_partition)[nodediff]))}\")\n",
     "print(f\"Number of nodes well classified by DCBM and not by OtrisymNMF :{np.sum((np.array(DCBM_partition)[nodediff] == np.array(True_partition)[nodediff]))}\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
