Retirer le tri des noeuds

--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -39,7 +39,7 @@
     "# Reading the graph\n",
     "G=nx.read_gml('Data\\polblogs_cleaned.gml',label='id')\n",
     "#Labels\n",
-    "True_partition = [int(G.nodes[node]['value'] )for node in sorted(G.nodes)]\n",
+    "True_partition = [int(G.nodes[node]['value'] )for node in G.nodes]\n",
     "\n",
     "# Display graph with labels\n",
     "position = nx.spring_layout(G,seed=14)\n",
@@ -67,13 +67,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
+   "source": [
+    "To compare the partition found by OtrisymNMF with the labels, we calculate the NMI."
+   ],
    "metadata": {
-    "pycharm": {
-     "metadata": false
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMI score: 0.7223895454752098\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "from sklearn.metrics import normalized_mutual_info_score as NMI\n",
+    "print(\"NMI score:\",NMI(True_partition,v))\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +122,7 @@
     "np.random.seed(12)\n",
     "\n",
     "# OtrisymNMF\n",
-    "X = nx.adjacency_matrix(G, nodelist=sorted(G.nodes))\n",
+    "X = nx.adjacency_matrix(G, nodelist=G.nodes)\n",
     "w, v, S, error = OtrisymNMF.OtrisymNMF_CD(X, 2,numTrials=1,verbosity=1)\n",
     "\n",
     "# Display of the OtrisymNMF's partition\n",
@@ -107,32 +131,6 @@
     "nx.draw(G, position, node_color=['r' if i == 0 else 'b' for i in v],node_size=node_sizes, edgecolors='black')\n",
     "pl.title(\"Partition of OtrisymNMF of the Political blog network \")\n",
     "pl.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "To compare the partition found by OtrisymNMF with the labels, we calculate the NMI."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NMI score: 0.7223895454752098\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import normalized_mutual_info_score as NMI\n",
-    "print(\"NMI score:\",NMI(True_partition,v))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -151,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -223,24 +221,6 @@
     "print(f\"Number of nodes well classified by OtrisymNMF and not by DCBM :{np.sum((v[nodediff] == np.array(True_partition)[nodediff]))}\")\n",
     "print(f\"Number of nodes well classified by DCBM and not by OtrisymNMF :{np.sum((np.array(DCBM_partition)[nodediff] == np.array(True_partition)[nodediff]))}\")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
