--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
@@ -67,44 +67,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "To compare the partition found by OtrisymNMF with the labels, we calculate the NMI."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NMI score: 0.7223895454752098\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import normalized_mutual_info_score as NMI\n",
-    "print(\"NMI score:\",NMI(True_partition,v))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Running 1 Trials in Series\n",
-      "Trial 1/1 with SSPA: Error 7.7872e-01 | Best: 7.7872e-01\n"
+      "itt\n",
+      "itt\n",
+      "Trial 1/1 with SSPA: Error 8.5694e-01 | Best: 8.5694e-01\n"
      ]
     },
     {
@@ -130,7 +103,36 @@
     "node_sizes = [10+G.degree(node) * 5 for node in G]\n",
     "nx.draw(G, position, node_color=['r' if i == 0 else 'b' for i in v],node_size=node_sizes, edgecolors='black')\n",
     "pl.title(\"Partition of OtrisymNMF of the Political blog network \")\n",
-    "pl.show()\n"
+    "pl.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To compare the partition found by OtrisymNMF with the labels, we calculate the NMI."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMI score: 0.7223895454752098\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import normalized_mutual_info_score as NMI\n",
+    "print(\"NMI score:\",NMI(True_partition,v))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
