Karate new exp + results LFR

--- a/Karate.ipynb
+++ b/Karate.ipynb
@@ -90,7 +90,15 @@
      "metadata": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 0 0 1 1 1 1 0 0 1 1 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "X = nx.adjacency_matrix(graph, nodelist=graph.nodes)\n",
     "np.random.seed(100)\n",
@@ -159,6 +167,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Trial 1/10 with random : logP -7.5285e+02 | Best LogP: -7.5285e+02\n",
+      "Trial 2/10 with random : logP -7.3939e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 3/10 with random : logP -7.3939e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 4/10 with random : logP -7.5285e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 5/10 with random : logP -7.5285e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 6/10 with random : logP -7.5285e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 7/10 with random : logP -7.5285e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 8/10 with random : logP -7.5453e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 9/10 with random : logP -7.3939e+02 | Best LogP: -7.3939e+02\n",
+      "Trial 10/10 with random : logP -7.3939e+02 | Best LogP: -7.3939e+02\n",
       "Best logP : -739.3884041633212\n",
       "NMI score: 0.6772430411026017\n",
       "The node misclassified additionally compared to OtrisymNMF: [9]\n"
@@ -171,6 +189,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
     }
    ],
    "source": [
@@ -353,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
