test avec Laplacien normalisé

--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -68,23 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Running 10 Trials in Series\n",
-      "Trial 1/10 with SSPA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 2/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 3/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 4/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 5/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 6/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 7/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 8/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 9/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 10/10 with SVCA: Error 8.5693e-01 | Best: 8.5693e-01\n"
+      "Trial 1/10 with SSPA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 2/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 3/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 4/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 5/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 6/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 7/10 with SVCA in 4 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 8/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 9/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 10/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n"
      ]
     },
     {
@@ -97,6 +97,7 @@
     }
    ],
    "source": [
+    "from scipy.sparse import diags\n",
     "import OtrisymNMF\n",
     "import numpy as np\n",
     "np.random.seed(12)\n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -169,6 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Trial 1/1 with SVCA : logP -3.3381e+05 | Best LogP: -3.3381e+05\n",
       "Best logP : -333807.2063420393\n",
       "NMI score: 0.7286769625628147\n"
      ]
@@ -211,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes classified differently between OtrisymNMF and DCBM :21\n",
-      "Number of nodes well classified by OtrisymNMF and not by DCBM :9\n",
-      "Number of nodes well classified by DCBM and not by OtrisymNMF :12\n"
+      "Number of nodes classified differently between OtrisymNMF and DCBM :568\n",
+      "Number of nodes well classified by OtrisymNMF and not by DCBM :19\n",
+      "Number of nodes well classified by DCBM and not by OtrisymNMF :549\n"
      ]
     }
    ],
