--- a/Karate.ipynb
+++ b/Karate.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -95,13 +95,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 1 1 1 1 0 0 1 1 1 1 0 0 1 1 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+      "  (0, 1)\t1\n",
+      "  (0, 2)\t1\n",
+      "  (0, 3)\t1\n",
+      "  (0, 4)\t1\n",
+      "  (0, 5)\t1\n",
+      "  (0, 6)\t1\n",
+      "  (0, 7)\t1\n",
+      "  (0, 8)\t1\n",
+      "  (0, 10)\t1\n",
+      "  (0, 11)\t1\n",
+      "  (0, 12)\t1\n",
+      "  (0, 13)\t1\n",
+      "  (0, 17)\t1\n",
+      "  (0, 19)\t1\n",
+      "  (0, 21)\t1\n",
+      "  (0, 31)\t1\n",
+      "  (1, 0)\t1\n",
+      "  (1, 2)\t1\n",
+      "  (1, 3)\t1\n",
+      "  (1, 7)\t1\n",
+      "  (1, 13)\t1\n",
+      "  (1, 17)\t1\n",
+      "  (1, 19)\t1\n",
+      "  (1, 21)\t1\n",
+      "  (1, 30)\t1\n",
+      "  :\t:\n",
+      "  (32, 18)\t1\n",
+      "  (32, 20)\t1\n",
+      "  (32, 22)\t1\n",
+      "  (32, 23)\t1\n",
+      "  (32, 29)\t1\n",
+      "  (32, 30)\t1\n",
+      "  (32, 31)\t1\n",
+      "  (32, 33)\t1\n",
+      "  (33, 8)\t1\n",
+      "  (33, 9)\t1\n",
+      "  (33, 13)\t1\n",
+      "  (33, 14)\t1\n",
+      "  (33, 15)\t1\n",
+      "  (33, 18)\t1\n",
+      "  (33, 19)\t1\n",
+      "  (33, 20)\t1\n",
+      "  (33, 22)\t1\n",
+      "  (33, 23)\t1\n",
+      "  (33, 26)\t1\n",
+      "  (33, 27)\t1\n",
+      "  (33, 28)\t1\n",
+      "  (33, 29)\t1\n",
+      "  (33, 30)\t1\n",
+      "  (33, 31)\t1\n",
+      "  (33, 32)\t1\n",
+      "[16  9 10  6  3  4  4  4  5  2  3  1  2  5  2  2  2  2  2  3  2  2  2  5\n",
+      "  3  3  2  4  3  4  4  6 12 17]\n",
+      "  (0, 0)\t0.25\n",
+      "  (1, 1)\t0.3333333333333333\n",
+      "  (2, 2)\t0.31622776601683794\n",
+      "  (3, 3)\t0.4082482904638631\n",
+      "  (4, 4)\t0.5773502691896258\n",
+      "  (5, 5)\t0.5\n",
+      "  (6, 6)\t0.5\n",
+      "  (7, 7)\t0.5\n",
+      "  (8, 8)\t0.4472135954999579\n",
+      "  (9, 9)\t0.7071067811865475\n",
+      "  (10, 10)\t0.5773502691896258\n",
+      "  (11, 11)\t1.0\n",
+      "  (12, 12)\t0.7071067811865475\n",
+      "  (13, 13)\t0.4472135954999579\n",
+      "  (14, 14)\t0.7071067811865475\n",
+      "  (15, 15)\t0.7071067811865475\n",
+      "  (16, 16)\t0.7071067811865475\n",
+      "  (17, 17)\t0.7071067811865475\n",
+      "  (18, 18)\t0.7071067811865475\n",
+      "  (19, 19)\t0.5773502691896258\n",
+      "  (20, 20)\t0.7071067811865475\n",
+      "  (21, 21)\t0.7071067811865475\n",
+      "  (22, 22)\t0.7071067811865475\n",
+      "  (23, 23)\t0.4472135954999579\n",
+      "  (24, 24)\t0.5773502691896258\n",
+      "  (25, 25)\t0.5773502691896258\n",
+      "  (26, 26)\t0.7071067811865475\n",
+      "  (27, 27)\t0.5\n",
+      "  (28, 28)\t0.5773502691896258\n",
+      "  (29, 29)\t0.5\n",
+      "  (30, 30)\t0.5\n",
+      "  (31, 31)\t0.4082482904638631\n",
+      "  (32, 32)\t0.2886751345948129\n",
+      "  (33, 33)\t0.24253562503633297\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'invert' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[9], line 11\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28mprint\u001B[39m(D)\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28mprint\u001B[39m(D_inv_sqrt)\n\u001B[1;32m---> 11\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minvert\u001B[49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43mD_inv_sqrt\u001B[49m\u001B[38;5;129;43m@D_inv_sqrt\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtoarray\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[0;32m     13\u001B[0m w, v, S, error \u001B[38;5;241m=\u001B[39m OtrisymNMF\u001B[38;5;241m.\u001B[39mOtrisymNMF_CD(X, \u001B[38;5;241m2\u001B[39m,numTrials\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m,verbosity\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: ufunc 'invert' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
      ]
     }
    ],
    "source": [
     "X = nx.adjacency_matrix(graph, nodelist=graph.nodes)\n",
     "np.random.seed(100)\n",
+    "\n",
     "w, v, S, error = OtrisymNMF.OtrisymNMF_CD(X, 2,numTrials=10,verbosity=0)"
    ]
   },
