--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -104,7 +104,7 @@
     "\n",
     "# OtrisymNMF\n",
     "X = nx.adjacency_matrix(G, nodelist=G.nodes)\n",
-    "w, v, S, error = OtrisymNMF.OtrisymNMF_CD(X, 2,numTrials=10,verbosity=1)\n",
+    "w, v, S, error,time_per_iteration = OtrisymNMF.OtrisymNMF_CD(X, 2,numTrials=10,verbosity=1)\n",
     "\n",
     "# Display of the OtrisymNMF's partition\n",
     "position = nx.spring_layout(G,seed=14)\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
