matlab  test bipartite

--- a/Polblogs.ipynb
+++ b/Polblogs.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -213,15 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes classified differently between OtrisymNMF and DCBM :568\n",
-      "Number of nodes well classified by OtrisymNMF and not by DCBM :19\n",
-      "Number of nodes well classified by DCBM and not by OtrisymNMF :549\n"
+      "Number of nodes classified differently between OtrisymNMF and DCBM :21\n",
+      "Number of nodes well classified by OtrisymNMF and not by DCBM :9\n",
+      "Number of nodes well classified by DCBM and not by OtrisymNMF :12\n",
+      "Number of nodes not well classified by DCBM and OtrisymNMF :49\n"
      ]
     }
    ],
@@ -230,8 +231,18 @@
     "print(f\"Number of nodes classified differently between OtrisymNMF and DCBM :{len(nodediff)}\")\n",
     "v[nodediff]\n",
     "print(f\"Number of nodes well classified by OtrisymNMF and not by DCBM :{np.sum((v[nodediff] == np.array(True_partition)[nodediff]))}\")\n",
-    "print(f\"Number of nodes well classified by DCBM and not by OtrisymNMF :{np.sum((np.array(DCBM_partition)[nodediff] == np.array(True_partition)[nodediff]))}\")"
+    "print(f\"Number of nodes well classified by DCBM and not by OtrisymNMF :{np.sum((np.array(DCBM_partition)[nodediff] == np.array(True_partition)[nodediff]))}\")\n",
+    "print(f\"Number of nodes not well classified by DCBM and OtrisymNMF :{np.sum((np.array(DCBM_partition)[np.where(DCBM_partition==v)[0]] != np.array(True_partition)[np.where(DCBM_partition==v)[0]]))}\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
