--- a/Karate.ipynb
+++ b/Karate.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Example Test OtrisymNMF VS DCBM on karate club network\n"
+    "# OtrisymNMF VS DCBM on the karate club network\n"
    ]
   },
   {
