--- a/polblogs.ipynb
+++ b/polblogs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
@@ -60,28 +60,28 @@
     }
    },
    "source": [
-    "Let's use the OtrisymNMF factorization of the adjacency matrix of graph X with r = 2 to detect the 2 communities in the network.\n",
-    "- v is a vector that gives the community index for each node.\n",
+    "Let's use the OtrisymNMF factorization of the adjacency matrix of graph X with r = 2 to detect the 2 communities in the network. To find this factorization, we use our method FROST giving:\n",
+    "- v is a vector that gives the community index of each node.\n",
     "- w indicates the importance of a node within its community.\n",
     "- S describes interactions between the r communities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Running 10 Trials in Series\n",
-      "Trial 1/10 with SSPA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 1/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 2/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 3/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 4/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 5/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 6/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
-      "Trial 7/10 with SVCA in 4 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
+      "Trial 7/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 8/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 9/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n",
       "Trial 10/10 with SVCA in 3 iterations: Error 8.5693e-01 | Best: 8.5693e-01\n"
@@ -100,7 +100,7 @@
     "from scipy.sparse import diags\n",
     "import otrisymNMF\n",
     "import numpy as np\n",
-    "np.random.seed(12)\n",
+    "np.random.seed(13)\n",
     "\n",
     "# OtrisymNMF\n",
     "X = nx.adjacency_matrix(G, nodelist=G.nodes)\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "To compare the partition found by OtrisymNMF with the labels, we calculate the NMI."
+    "To compare the partition found by using OtrisymNMF with the true labels, we calculate the NMI."
    ],
    "metadata": {
     "collapsed": false
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -148,6 +148,13 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "metadata": false
@@ -170,7 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 1/1 with SVCA : logP -3.3381e+05 | Best LogP: -3.3381e+05\n",
+      "Trial 1/2 with SVCA : logP -3.3381e+05 | Best LogP: -3.3381e+05\n",
+      "Trial 2/2 with SVCA : logP -3.3381e+05 | Best LogP: -3.3381e+05\n",
       "Best logP : -333807.2063420393\n",
       "NMI score: 0.7286769625628147\n"
      ]
@@ -189,10 +197,10 @@
     "from dcbm import dcbm\n",
     "import random\n",
     "random.seed(12)\n",
-    "np.random.seed(40)\n",
+    "np.random.seed(44)\n",
     "\n",
     "#DCBM\n",
-    "DCBM_partition=dcbm(G,2,pysbm.DegreeCorrectedUnnormalizedLogLikelyhood,pysbm.EMInference, numTrials=1,init_method=\"SVCA\")\n",
+    "DCBM_partition=dcbm(G,2,pysbm.DegreeCorrectedUnnormalizedLogLikelyhood,pysbm.EMInference, numTrials=2,init_method=\"SVCA\")\n",
     "print(\"NMI score:\",nmi(True_partition,DCBM_partition))\n",
     "\n",
     "# Change cluster 0 and 1 to have the same indexing\n",
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [],
    "source": [],
    "metadata": {
